syntax = "proto3";
package proto;

import "msgenum.proto";
option go_package = ".;proto";
message HeroMsg {
  int32 heroId = 1; //玩家的ID
  CoordinateXY heroPosition = 2; //玩家的坐标
  float heroSpeed = 3; //玩家的速度
  float heroSize = 4; //玩家的大小
  CoordinateXY heroDirection = 5; //玩家的行进方向
  HERO_STATUS heroStatus = 6; //玩家的状态
  bool invincible = 7; // 是否处于无敌状态
  bool speedUp = 8; // 是否处于加速状态
  bool speedDown = 9; // 是否处于减速状态
  int32 heroScore = 10; //玩家分数
}

message HeroRankMsg {
  int32 heroId = 1; //玩家id
  string heroName = 2; //玩家名
  int32 heroRank = 3; //玩家排名
  int32 heroScore = 4;  //玩家分数
}

message ItemMsg {
  int32 ItemId = 1; //Item的Id
  ENTITY_TYPE ItemType = 2; //Item的类型
  CoordinateXY ItemPosition = 3; //Item的初始坐标
  ITEM_STATUS ItemStatus = 4; //Item的状态
}

message MapMsg {
  float XMin = 1;
  float XMax = 2;
  float YMin = 3;
  float YMax = 4; //四个边界
}

message CoordinateXY { //坐标点
  float coordinateX = 1; //横坐标
  float coordinateY = 2; //纵坐标
}

message ConnectMsg{
  string ip = 1;
  int32 port =2;
}